# wakebot

./: .gitignore  Cargo.toml
.shuttle/: config.toml
src/: aws.rs  errors.rs  lib.rs  main.rs  rolls.rs  rolls_v2.rs  youtube.rs
