[package]
name = "wakebot"
version = "0.1.0"
edition = "2021"
authors = ["Ed Reeseg <edward.reeseg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = "1.0.62"
chrono = "0.4.23"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = "1.0.152"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-persist = "0.10.0"
shuttle-secrets = "0.10.0"
shuttle-service = { version = "0.10.0", features = ["bot-serenity"] }
tokio = { version = "1.22.0", features = ["time"] }
