[package]
name = "wakebot"
version = "0.1.0"
edition = "2021"
authors = ["Ed Reeseg <edward.reeseg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
aws-config = "0.55.2"
aws-sdk-dynamodb = "0.27.0"
chrono = "0.4.23"
rand = "0.8.5"
fancy-regex = "0.11.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = "1.0.152"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shunting = "0.1.2"
shuttle-persist = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-secrets = "0.27.0"
shuttle-serenity = "0.27.0"
tokio = { version = "1.22.0", features = ["full"] }
