[package]
name = "wakebot"
version = "0.1.0"
edition = "2021"
authors = ["Ed Reeseg <edward.reeseg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
aws-config = "0.55.2"
aws-sdk-dynamodb = "0.27.0"
rand = "0.8.5"
fancy-regex = "0.11.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = "1.0.152"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shunting = "0.1.2"
shuttle-persist = "0.44.0"
shuttle-runtime = "0.44.0"
shuttle-serenity = { version = "0.44.0", default-features = false, features = ["serenity-0-11-rustls_backend"] }
tokio = { version = "1.22.0", features = ["full"] }
